--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,27 +32,40 @@ header li {
     height: 450px;
     width: 100%;   
 }
-/*
-.avatar {
+
+.avatar img{
     display: block;
+    margin: 20px auto;
+    max-width: 100px;
+    /*
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
+    padding: 10px;*/
     
 }
-*/
+
 .developer {
     display: block;
     flex-wrap: wrap;
     /*justify-content: center;*/
     /*align-items: center;*/
 
+}
 
+.about-me {
+    background-color: rgb(202, 96, 158);
+    height: 450px;
+    width: 100%;
+    display: block;
+    flex-wrap: wrap;
+}
+.about-me h2 {
+    padding: 200px 0 10px 0;
+}
+.about-me p {
+    padding: 0 150px;
 
 }
-/*
-# aboout-me
-*/
 
 /*
 #web-applicatiom
