--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ header ul {
     flex-wrap: wrap;
     align-items: center;
     list-style: none;
+    padding: 20px 0;
    /* box-sizing: 0 50%;*/
 }
 
@@ -27,20 +28,25 @@ header li {
     margin-right: 150px;*/
 }
 
+.fullscreen {
+    width: 100%;
+    height: 100vh;
+    /*color*/
+}
+
 .opener {
     background-color: aqua;
-    height: 450px;
-    width: 100%;   
+/*    height: 450px;
+    width: 100%;   */
 }
 
 .avatar img{
     display: block;
-    margin: 20px auto;
-    max-width: 100px;
-    /*
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;*/
+    margin: auto; 
+    max-width: 200px;
+ /*   margin-left: auto;
+    margin-right: auto; */
+    padding: 20vh 0;
     
 }
 
@@ -54,22 +60,36 @@ header li {
 
 .about-me {
     background-color: rgb(202, 96, 158);
-    height: 450px;
+    /*height: 450px;*/
     width: 100%;
     display: block;
-    flex-wrap: wrap;
+    flex-wrap: auto;
+    padding: 30vh 20px;
+    
 }
+
 .about-me h2 {
-    padding: 200px 0 10px 0;
+    padding: 0 0 20px 0;
 }
+
 .about-me p {
-    padding: 0 150px;
+    text-align: justify;
+}
+   
+
+
+
+.app-link {
+    background-color: aqua;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    padding: auto;
+    flex: 0 0 400px;
+
 
 }
 
-/*
-#web-applicatiom
-*/
 
 /*
 #contact
