--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,13 +31,13 @@ header li {
 .fullscreen {
     width: 100%;
     height: 100vh;
+
     /*color*/
 }
 
 .opener {
     background-color: aqua;
-/*    height: 450px;
-    width: 100%;   */
+  /* width: 100%;    */
 }
 
 .avatar img{
@@ -59,7 +59,15 @@ header li {
 }
 
 .about-me {
-    background-color: rgb(202, 96, 158);
+    background-color: rgb(150, 72, 133);
+}
+
+.web-application {
+    background-color: blueviolet;
+}
+
+.about-me, .web-application{
+    /*background-color: rgb(202, 96, 158);/*
     /*height: 450px;*/
     width: 100%;
     display: block;
@@ -68,28 +76,65 @@ header li {
     
 }
 
-.about-me h2 {
+.about-me h2, .web-application h2 {
     padding: 0 0 20px 0;
 }
 
-.about-me p {
-    text-align: justify;
+.about-me p, .web-application p {
+    text-align: left;
+    width: auto;
+    margin-left: 30px;
+    margin-right: 30px;   
 }
-   
+
+
+.portfolio-links {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-basis: auto;
+    justify-content: center;
+    padding-top: 20px;
+}
 
 
 
 .app-link {
-    background-color: aqua;
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
+    margin: 5px;
     padding: auto;
-    flex: 0 0 400px;
+    /*flex: 0 0 400px;*/
+    width: 300px;
+    height: 300px;
+    display: inline-block;
+    flex-wrap: wrap;
+    justify-content: center;
 
-
+    transition: transform .2s;
 }
 
+
+.app-link h3{
+    
+    padding: 120px 0 0 0;
+   /* line-height: 1.5;*/
+}
+
+
+.app-link:hover {
+    transform: scale(1.2);
+}
+
+/*.run-buddy {
+    background-image: ;
+}*/
+
+.horiseon {
+    background-image: url(../images/horiseon-screenshot.png);
+
+}
 
 /*
 #contact
