--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,17 +27,18 @@ header li {
    /* margin-left: 150px;
     margin-right: 150px;*/
 }
-
+/*
 .fullscreen {
     width: 100%;
     height: 100vh;
 
-    /*color*/
-}
+
+}*/
 
 .opener {
     background-color: aqua;
-  /* width: 100%;    */
+    width: 100%; 
+    margin: 10px;   
 }
 
 .avatar img{
@@ -60,10 +61,14 @@ header li {
 
 .about-me {
     background-color: rgb(150, 72, 133);
+    width: 100%;
+    margin: 10px;
 }
 
 .web-application {
     background-color: blueviolet;
+    margin: 10px;
+    
 }
 
 .about-me, .web-application{
@@ -127,9 +132,9 @@ header li {
     transform: scale(1.2);
 }
 
-/*.run-buddy {
-    background-image: ;
-}*/
+.run-buddy {
+    background-image: url(../images/run-buddy-screenshot.png);
+}
 
 .horiseon {
     background-image: url(../images/horiseon-screenshot.png);
