--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,15 +17,25 @@ header ul {
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-    list-style: none;
+    list-style-type: none;
     padding: 20px 0;
    /* box-sizing: 0 50%;*/
 }
 
 header li {
     display: inline-block;
+ /*   list-style-type: none; */
+
    /* margin-left: 150px;
     margin-right: 150px;*/
+}
+
+header a {
+    text-decoration: none;
+}
+
+footer{
+    padding: 5px;
 }
 
 .avatar img{
@@ -38,7 +48,7 @@ header li {
     
 }
 
-.intro, .about-me, .my-projects {
+.intro, .about-me, .my-resume, .my-projects, .contact-me {
 
     background-image: url("../images/background1.jpg");
     background-size: cover;
@@ -47,7 +57,7 @@ header li {
     margin: 10px;   
 }
 
-.intro, .about-me {
+.intro, .about-me, .contact-me {
     height: 100vh;
 }
 
@@ -59,19 +69,15 @@ header li {
 
 }
 
-.about-me {
+.about-me, .contact-me {
     padding: 30vh 20px;
 
 }
 
-.my-projects {
-    padding: 10vh 20px;
-    height: 100%;
-}
 
 
 
-.about-me, .my-projects{
+.about-me, .my-projects, .contact-me{
     /*background-color: rgb(202, 96, 158);/*
     /*height: 450px;*/
 
@@ -89,6 +95,12 @@ header li {
     margin-left: 30px;
     margin-right: 30px;   
 }
+
+.my-resume, .my-projects, .contact-me {
+    padding: 10vh 20px;
+    height: 100%;
+}
+
 
 
 .my-project-links {
@@ -119,9 +131,16 @@ header li {
 
 .live-link h3{
     padding: 120px 0 0 0;
+
    /* line-height: 1.5;*/
 }
 
+
+
+.live-link a{
+    text-decoration: none;
+    
+}
 
 .live-link:hover {
     transform: scale(1.2);
@@ -133,12 +152,20 @@ header li {
 
 .horiseon {
     background-image: url(../images/horiseon-screenshot.png);
+    opacity: 0.7;
+}
+
+.example-3 {
+}
+
+.example-4 {
+}
+
+.example-5 {
 
 }
 
-/*
-#contact
-*/
+
 
 
 
