--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,15 @@ header li {
 header a {
     text-decoration: none;
     color: black;
+
+    transition: transform .2s;
     
 }
+
+header li:hover {
+    transform: scale(1.5);
+    
+}    
 
 footer{
     padding: 0 0 20px 0;
