--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,18 +181,18 @@ footer {
 
 .horiseon {
     background-image: url(../images/Horiseon-screenshot-resize.png);
-
 }
 
-
 .example-3 {
+    background-image: url(../images/example3.jpg);
 }
 
 .example-4 {
+    background-image: url(../images/example4.jpg);
 }
 
 .example-5 {
-
+    background-image: url(../images/example5.jpg);
 }
 
 /* CONTACT SECTION */
