correct img error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,8 +162,8 @@ footer {
 }
 
 .run-buddy {
-    background-image: url(../images/run-buddy-resize-square.jpg);
-    width: 600px;
+    background-image: url(../images/run-buddy-screenshot.png);
+    width: 900px;
     height: 300px;
 }
 
