--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,6 @@ footer {
     padding: 30px 20px;
 }
 
-
 .contact-form input, .contact-form textarea{
     border: 1px solid;
     display: block;
@@ -238,7 +237,6 @@ footer {
     width: 50%;
     margin: auto;
     border-radius: 5px;
-
 }
 
 .contact-form button {
@@ -246,6 +244,16 @@ footer {
     border: 1px solid;
     padding: 10px 20px;
     margin-top: 10px;
+}
+
+.fa-github, .fa-linkedin {
+    padding: 5px;
+}
+
+.contact-info p{
+    text-align: center;
+    padding-top: 5px;
+    font-size: smaller;
 }
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
