--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,284 +1,316 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(145, 147, 150);
-    text-align: center;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	background-color: rgb(145, 147, 150);
+	text-align: center;
 }
 
 header {
-    padding-top: 20px;
+	padding-top: 20px;
 }
 header ul {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
-    list-style-type: none;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	align-items: center;
+	list-style-type: none;
 }
 
 header li {
-    display: inline-block;
-  
+	display: inline-block;
 }
 
 header a {
-    text-decoration: none;
-    color: black;
+	text-decoration: none;
+	color: black;
 
-    transition: transform .2s;
+	transition: transform 0.2s;
 }
 
 header li:hover {
-    transform: scale(1.3);
-    
-}    
+	transform: scale(1.3);
+}
 
 footer {
-    padding: 0 0 20px 0;
-    font-weight: lighter;
+	padding: 0 0 20px 0;
+	font-weight: lighter;
 }
 
-.avatar img{
-    display: block;
-    margin: auto; 
-    max-width: 200px;
-    padding: 20vh 0 5vh 0;
-}
-    
-.intro, .about-me, .my-resume, .my-projects, .contact-form {
-
-    background-image: url("../images/background1.jpg");
-    background-size: 100%;
-    background-position: center;
-    margin: 20px;   
+.avatar img {
+	display: block;
+	margin: auto;
+	max-width: 200px;
+	padding: 20vh 0 5vh 0;
 }
 
-.intro, .about-me {
-    height: 100vh;
+.intro,
+.about-me,
+.my-resume,
+.my-projects,
+.contact-form {
+	background-image: url("../images/background1.jpg");
+	background-size: 100%;
+	background-position: center;
+	margin: 20px;
+}
+
+.intro,
+.about-me {
+	height: 100vh;
 }
 
 .intro-text {
-    display: block;
-    flex-wrap: wrap;
+	display: block;
+	flex-wrap: wrap;
 }
 
 .intro-text h1 {
-    font-size: 50px;
-    font-weight: lighter;
+	font-size: 50px;
+	font-weight: lighter;
 }
 
 .intro-text h2 {
-    font-weight: lighter;
-    font-style: italic;
-    padding-bottom: 10px;
+	font-weight: lighter;
+	font-style: italic;
+	padding-bottom: 10px;
 }
 
 .intro-text p {
-    font-size: 15px;
+	font-size: 15px;
 }
 
-.about-me h2, .my-resume h2, .my-projects h2, .contact-form h2 {
-    font-size: 25px;
-    font-style: italic;
+.about-me h2,
+.my-resume h2,
+.my-projects h2,
+.contact-form h2 {
+	font-size: 25px;
+	font-style: italic;
 }
-.about-me, .contact-form {
-    padding: 30vh 20px;
+.about-me,
+.contact-form {
+	padding: 30vh 20px;
 }
-.about-me, .my-projects, .contact-form{
-    display: block;
-    flex-wrap: auto;
-}
-
-.about-me h2, .my-resume h2, .my-projects h2, .contact-form h2{
-    padding-bottom: 20px;
-}
-
-.about-me p, .my-projects p, .contact-form p {
-    text-align: left;
-    width: auto;
-    margin-left: 30px;
-    margin-right: 30px;   
+.about-me,
+.my-projects,
+.contact-form {
+	display: block;
+	flex-wrap: auto;
 }
 
-.my-resume, .my-projects {
-    padding: 10vh 20px;
-    height: 100%;
+.about-me h2,
+.my-resume h2,
+.my-projects h2,
+.contact-form h2 {
+	padding-bottom: 20px;
+}
+
+.about-me p,
+.my-projects p,
+.contact-form p {
+	text-align: left;
+	width: auto;
+	margin-left: 30px;
+	margin-right: 30px;
+}
+
+.my-resume,
+.my-projects {
+	padding: 10vh 20px;
+	height: 100%;
 }
 
 .my-project-links {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-basis: auto;
-    justify-content: center;
-    padding-top: 20px;
-
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	flex-basis: auto;
+	justify-content: center;
+	padding-top: 20px;
 }
 
 .live-link {
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 5px;
-    margin: 5px;
-    padding: auto;
-    /*flex: 0 0 400px;*/
-    width: 300px;
-    height: 300px;
-    display: inline-block;
-    flex-wrap: wrap;
-    justify-content: center;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 5px;
+	margin: 5px;
+	padding: auto;
+	/*flex: 0 0 400px;*/
+	width: 300px;
+	height: 300px;
+	display: inline-block;
+	flex-wrap: wrap;
+	justify-content: center;
 
-    transition: transform .2s;
+	transition: transform 0.2s;
 }
 
 .live-link h3 {
-    padding: 115px 0 10px 0;
-    font-size: 33px;
-    font-style: italic;
+	padding: 115px 0 10px 0;
+	font-size: 33px;
+	font-style: italic;
 
-   /* line-height: 1.5;*/
+	/* line-height: 1.5;*/
 }
 
 .live-link a {
-    text-decoration: none;
-    position: relative;
-    color: black;
+	text-decoration: none;
+	position: relative;
+	color: black;
 }
 
 .live-link:hover {
-    transform: scale(1.2);
+	transform: scale(1.2);
+}
+
+.meet-up-satx {
+	background-image: url(../images/meet-up-satx-screenshot.jpg);
+	background-size: cover;
+	width: 900px;
+	height: 300px;
+}
+
+.meet-up-satx a,
+.meet-up-satx h4 {
+	color: bisque;
+	text-shadow: 2px 2px 3px black;
 }
 
 .search-watch-chill {
-    background-image: url(../images/search-watch-chill-screenshot-clip.jpg);
-    background-size: cover;
-    width: 900px;
-    height: 300px;
+	background-image: url(../images/search-watch-chill-screenshot-clip.jpg);
+	background-size: cover;
+	/* width: 900px;
+	height: 300px; */
 }
 
-.search-watch-chill a, .search-watch-chill h4{
-    color: bisque;
-    text-shadow: 2px 2px 3px black;
+.search-watch-chill a,
+.search-watch-chill h4 {
+	color: bisque;
+	text-shadow: 2px 2px 3px black;
 }
 
-.run-buddy {
-    background-image: url(../images/run-buddy-screenshot.png);  
+.tech-blog {
+	background-image: url(../images/MVC-screenshot_edited.jpg);
 }
 
-.run-buddy a, .run-buddy h4 {
-    font-weight: bolder;
-    text-shadow: 2px 2px 2px white;
+.tech-blog a,
+.tech-blog h4 {
+	font-weight: bolder;
+	/* text-shadow: 2px 2px 2px white; */
 }
 
-.horiseon {
-    background-image: url(../images/Horiseon-screenshot-resize.png);
-    
+.note-taker {
+	background-image: url(../images/note-taker-landing-page.jpg);
 }
 
-.horiseon a, .horiseon h4 {
-    font-weight: bolder;
-    text-shadow: 2px 2px 2px white;
+.note-taker a,
+.note-taker h4 {
+	font-weight: bolder;
+	text-shadow: 2px 2px 2px white;
 }
 
 .password-generator {
-    background-image: url(../images/password-generator-screenshot-clip_edited.jpg);
-    text-shadow: 1px 2px 3px white;
+	background-image: url(../images/password-generator-screenshot-clip_edited.jpg);
+	text-shadow: 1px 2px 3px white;
 }
 
 .coding-quiz {
-    background-image: url(../images/coding-quiz-screenshot_edited.jpg);
-    background-size: cover;
+	background-image: url(../images/coding-quiz-screenshot_edited.jpg);
+	background-size: cover;
 }
 
-.coding-quiz a, .coding-quiz h4 {
-    /* font-weight: bold; */
-    text-shadow: 2px 2px 4px white;
+.coding-quiz a,
+.coding-quiz h4 {
+	/* font-weight: bold; */
+	text-shadow: 2px 2px 4px white;
 }
 
 .work-day-scheduler {
-    background-image: url(../images/work-day-scheduler-screenshot_edited.jpg);
-    background-size: cover;
-    text-shadow: 2px 2px 3px white;
-
+	background-image: url(../images/work-day-scheduler-screenshot_edited.jpg);
+	background-size: cover;
+	text-shadow: 2px 2px 3px white;
 }
 
 .weather-dashboard {
-    background-image: url(../images/weather-dashboard-screenshot_edited.jpg);
-    text-shadow: 2px 3px 3px black;
-    background-size: cover;
-    font-weight: bold;
-    color: aliceblue;
+	background-image: url(../images/weather-dashboard-screenshot_edited.jpg);
+	text-shadow: 2px 3px 3px black;
+	background-size: cover;
+	font-weight: bold;
+	color: aliceblue;
 }
 
-.weather-dashboard a, .weather-dashboard h4 {
-    font-weight: bold;
-    color: aliceblue;
+.weather-dashboard a,
+.weather-dashboard h4 {
+	font-weight: bold;
+	color: aliceblue;
 }
 
 /* CONTACT SECTION */
-.contact-form input, .contact-form your-email{
-    padding: 15px 20px;
+.contact-form input,
+.contact-form your-email {
+	padding: 15px 20px;
 }
 
 .contact-form textarea {
-    padding: 30px 20px;
+	padding: 30px 20px;
 }
 
-.contact-form input, .contact-form textarea{
-    border: 1px solid;
-    display: block;
-    font-size: 12px;
-    font-style: italic;
-    width: 50%;
-    margin: auto;
-    border-radius: 5px;
+.contact-form input,
+.contact-form textarea {
+	border: 1px solid;
+	display: block;
+	font-size: 12px;
+	font-style: italic;
+	width: 50%;
+	margin: auto;
+	border-radius: 5px;
 }
 
 .contact-form button {
-    width: auto;
-    border: 1px solid;
-    padding: 10px 20px;
-    margin-top: 10px;
+	width: auto;
+	border: 1px solid;
+	padding: 10px 20px;
+	margin-top: 10px;
 }
 
-.fa-github, .fa-linkedin {
-    padding: 5px;
+.fa-github,
+.fa-linkedin {
+	padding: 5px;
 }
 
-.contact-info p{
-    text-align: center;
-    padding-top: 5px;
-    font-size: smaller;
+.contact-info p {
+	text-align: center;
+	padding-top: 5px;
+	font-size: smaller;
 }
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-    .intro {
-        height: 100%;
-        padding-bottom: 20vh;
-    }
+	.intro {
+		height: 100%;
+		padding-bottom: 20vh;
+	}
 }
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
-@media screen and (max-width:768px) {
-    .intro {
-        height: 100%;
-        padding-bottom: 10vh;
-    }
+@media screen and (max-width: 768px) {
+	.intro {
+		height: 100%;
+		padding-bottom: 10vh;
+	}
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
-    .avatar img {
-        padding-top: 10vh;
-    }
+	.avatar img {
+		padding-top: 10vh;
+	}
 
-    .contact-form {  
-        padding: 10vh 20px;
-    }
+	.contact-form {
+		padding: 10vh 20px;
+	}
 }
